--- a/.github/workflows/issue-comment-created.yml
+++ b/.github/workflows/issue-comment-created.yml
@@ -1,11 +1,10 @@
+---
 name: Remove outdated labels
 on:
   pull_request_target:
-    types:
-      - closed
+    types: [closed]
   issues:
-    types:
-      - closed
+    types: [closed]
 jobs:
   remove-merged-pr-labels:
     name: Remove merged pull request labels
