--- a/.github/no-response.yml
+++ b/.github/no-response.yml
@@ -1,3 +1,4 @@
+---
 # Configuration for probot-no-response - https://github.com/probot/no-response
 
 # Number of days of inactivity before an Issue is closed for lack of response
@@ -6,6 +7,9 @@ daysUntilClose: 30
 responseRequiredLabel: more-information-needed
 # Comment to post when closing an Issue for lack of response. Set to `false` to disable
 closeComment: >-
-  This issue has been automatically closed because there has been no response to our request for more information from the
-  original author. With only the information that is currently in the issue, we don't have enough information to take action.
-  Please feel free to reach out if you have or find the answers we need so that we can investigate further. Thank you!
+  This issue has been automatically closed because there has been no response to our
+  request for more information from the
+  original author. With only the information that is currently in the issue, we don't
+  have enough information to take action.
+  Please feel free to reach out if you have or find the answers we need so that we
+  can investigate further. Thank you!
