--- a/.github/workflows/ci-mod-boilerplates.yaml
+++ b/.github/workflows/ci-mod-boilerplates.yaml
@@ -1,12 +1,9 @@
+---
 name: CI Mod Boilerplates 🧰
 on:
   push:
-    branches:
-      - main
-      - master
-    paths:
-      - module-template/**
-      - module-template-light/**
+    branches: [main, master]
+    paths: [module-template/**, module-template-light/**]
   pull_request:
     paths:
       - module-template/**
@@ -18,7 +15,7 @@ permissions:
   pull-requests: read
   checks: write
 env:
-  GO_VERSION: "1.22"
+  GO_VERSION: '1.22'
   DAGGER_VERSION: 0.14.0
   GOLANGCI_LINT_VERSION: v1.62.0
 jobs:
@@ -75,7 +72,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: 📦 List Main Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}
@@ -84,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 🧪 List Test Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}/tests
@@ -93,7 +90,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 📄 List Example Module Functions
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: functions
           module: ${{ matrix.module }}/examples/go
@@ -115,7 +112,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: 💣 Run All Tests
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: test-all
@@ -138,7 +135,7 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
       - name: 🥗 Run All Example Recipes
-        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432 # v6.13.0
+        uses: dagger/dagger-for-github@6b6e9832f7dffd6cd9cdd989a577bb2cbfc45432  # v6.13.0
         with:
           verb: call
           args: all-recipes
