--- a/.yamlfmt.yml
+++ b/.yamlfmt.yml
@@ -1,3 +1,4 @@
+---
 # Yamlfmt configuration aligned with yamllint best practices
 formatter:
   type: basic
@@ -8,23 +9,18 @@ formatter:
   max_line_length: 120
   trim_trailing_whitespace: true
   eof_newline: true
-
 # Global configuration
 line_ending: lf
 continue_on_error: false
-include:
-  - "**/*.yml"
-  - "**/*.yaml"
+include: ['**/*.yml', '**/*.yaml']
 exclude:
-  - ".git/**"
-  - ".github/ISSUE_TEMPLATE/**"
-  - "node_modules/**"
-  - "dist/**"
-  - "vendor/**"
-  - "target/**"
-  - ".direnv/**"
-  - ".terraform/**"
-  - ".terragrunt-cache/**"
-  - "devenv/**"
-  - "**/testdata/**/*.yaml"
-  - "**/testdata/**/*.yml"
+  - .git/**
+  - .github/ISSUE_TEMPLATE/**
+  - node_modules/**
+  - dist/**
+  - vendor/**
+  - target/**
+  - .direnv/**
+  - .terraform/**
+  - .terragrunt-cache/**
+  - devenv/**
