--- a/gotest/tests/testdata/golang/.goreleaser.yaml
+++ b/gotest/tests/testdata/golang/.goreleaser.yaml
@@ -1,3 +1,4 @@
+---
 version: 2
 project_name: gotoolbox-app
 before:
@@ -6,20 +7,17 @@ before:
 # setups builds for linux and darwin on amd64 and arm64
 # https://goreleaser.com/customization/build
 builds:
-  - env:
-      - CGO_ENABLED=0
-    goos:
-      - linux
-      - darwin
+  - env: [CGO_ENABLED=0]
+    goos: [linux, darwin]
     goarch:
       - amd64
       - arm64
     # ensures mod timestamp to be the commit timestamp
-    mod_timestamp: "{{ .CommitTimestamp }}"
+    mod_timestamp: '{{ .CommitTimestamp }}'
     main: main.go
     flags:
       # trims path
-      - -trimpath
+[-trimpath]
     ldflags:
       # use commit date instead of current date as main.date
       # only needed if you actually use those things in your main package, otherwise can be ignored.
@@ -42,7 +40,7 @@ source:
 # https://goreleaser.com/customization/sbom
 sboms:
   - artifacts: archive
-  - id: source # Two different sbom configurations need two different IDs
+  - id: source  # Two different sbom configurations need two different IDs
     artifacts: source
 archives:
   - wrap_in_directory: true
@@ -50,11 +48,8 @@ archives:
       - goos: windows
         format: zip
 snapshot:
-  name_template: "{{ .Tag }}-snapshot"
+  name_template: '{{ .Tag }}-snapshot'
 changelog:
   sort: asc
   filters:
-    exclude:
-      - "^docs:"
-      - "^test:"
-      - "^*.md:"
+    exclude: ['^docs:', '^test:', '^*.md:']
