--- a/terragrunt/config/presets/base-alpine.yaml
+++ b/terragrunt/config/presets/base-alpine.yaml
@@ -1,3 +1,4 @@
+---
 contents:
   repositories:
     - https://dl-cdn.alpinelinux.org/alpine/v3.18/main
@@ -26,13 +27,11 @@ accounts:
   run-as: terragrunt
 entrypoint:
   command: /bin/bash -l
-archs:
-  - x86_64
-  - aarch64
+archs: [x86_64, aarch64]
 environment:
   PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/terragrunt/bin:/home/terragrunt/.local/bin
   TERRAGRUNT_PROVIDER_CACHE_DIR: /home/terragrunt/.terragrunt-providers-cache
-  TERRAGRUNT_PROVIDER_CACHE: "1"
+  TERRAGRUNT_PROVIDER_CACHE: '1'
   TF_PLUGIN_CACHE_DIR: /home/.terraform.d/plugin-cache
   TZ: UTC
   LANG: en_US.UTF-8
@@ -76,7 +75,8 @@ paths:
     permissions: 0o755
 annotations:
   title: Base Alpine for Terragrunt
-  description: A minimal Alpine base image built with APKO for Terragrunt, optimized for security and performance.
+  description: A minimal Alpine base image built with APKO for Terragrunt, optimized
+    for security and performance.
   version: 1.1.0
   vendor: github.com/Excoriate - Alex Torres
   licenses: Apache-2.0
