fix: Improve YAML linting configuration
- Add exclusions for .github/workflows/, tests/testdata/, and .goreleaser.yaml files
- Set `empty-values` rule to `forbid: all` to disallow empty values in YAML files
- Enable strict mode for yamllint to enforce all rules

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,7 +46,13 @@ repos:
     rev: v1.35.1
     hooks:
       - id: yamllint
-        args: [-c=.yamllint.yml]
+        args: [-c=.yamllint.yml, --strict]
+        exclude: >-
+          (?x)^(
+            .github/workflows/|
+            tests/testdata/|
+            .goreleaser.yaml
+          )
 # Global settings
 minimum_pre_commit_version: 3.0.0
 ci:
