--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -31,6 +31,7 @@ rules:
     max: 1
   empty-values:
     level: error
+    forbid: all
   hyphens:
     level: error
     max-spaces-after: 1
@@ -64,4 +65,6 @@ ignore: |
   .terraform/
   .terragrunt-cache/
   devenv/
+  **/.goreleaser.yaml
+  **/.github/workflows/*.yml
 yaml-files: ['*.yaml', '*.yml', .yamllint.yml]
