feat: Update pre-commit hooks and configuration
This commit updates the pre-commit configuration in the following ways:

1. Adds new exclude patterns to the global exclude list, including `.github/ISSUE_TEMPLATE/`, `.github/workflows/`, `tests/testdata/`, and `.goreleaser.yaml`.
2. Updates the `yamlfmt` hook to use the `google/yamlfmt` repository with the latest version (v0.14.0).
3. Modifies the `yamllint` hook configuration to exclude the `.github/workflows/`, `tests/testdata/`, `.goreleaser.yaml`, and `.markdownlint.yaml` files.
4. Updates the `.yamllint.yml` configuration to include the `tests/testdata/` directory in the ignore list.
5. Removes the `check-yaml` hook from the `pre-commit-hooks` as it is no longer necessary with the updated `yamlfmt` and `yamllint` configurations.
6. Adds a comprehensive configuration for `yamlfmt` in the `.yamlfmt.yml` file, including options for line endings, indentation, max line length, and more.
7. Updates the `terragrunt/config/presets/base-alpine.yaml` and `tflinter/config/presets/base-alpine.yaml` files with minor formatting changes.

These changes aim to improve the overall quality and consistency of the codebase by enforcing better YAML formatting and linting rules.

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -11,10 +11,8 @@ exemptLabels:
 staleLabel: wontfix
 # Comment to post when marking an issue as stale. Set to `false` to disable
 markComment: >
-  👋  Hello. Is this still relevant? If so, what is blocking it? Is there anything
-  you can do to help move it forward?  # magic___^_^___line
-  > This issue has been automatically marked as stale because it has not had recent
-  activity. It will be closed if no further
+  👋  Hello. Is this still relevant? If so, what is blocking it? Is there anything you can do to help move it forward?  # magic___^_^___line
+  > This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further
   activity occurs. # magic___^_^___line Thank you for your contributions.  # magic___^_^___line
 # Comment to post when closing a stale Issue or Pull Request. Set to `false` to disable
 closeComment: >-
