--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ default_language_version:
   rust: stable
   golang: '1.21'
   node: system
-# Simplified exclude pattern
+# Global exclude pattern (if necessary)
 exclude: >-
   (?x)^(
     \.direnv/|
@@ -17,7 +17,11 @@ exclude: >-
     \.terragrunt-cache/|
     devenv/|
     node_modules/|
-    vendor/
+    vendor/|
+    \.github/ISSUE_TEMPLATE/|
+    .github/workflows/|
+    tests/testdata/|
+    \.goreleaser\.yaml
   )
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -25,8 +29,6 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: check-yaml
-        args: [--allow-multiple-documents]
       - id: check-added-large-files
       - id: check-merge-conflict
       - id: detect-aws-credentials
@@ -36,22 +38,28 @@ repos:
     hooks:
       - id: terraform_fmt
       - id: terragrunt_fmt
-  - repo: https://github.com/lyz-code/yamlfix
-    rev: 1.17.0
+  # Updated yamlfmt hook
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.14.0
     hooks:
-      - id: yamlfix
-        args: [-c, .yamllint.yml]
-        types: [yaml]
+      - id: yamlfmt
+        language: system
+        additional_dependencies: []
+        args:
+          - -conf=.yamlfmt.yml
+        files: \.(yml|yaml)$
   - repo: https://github.com/adrienverge/yamllint
     rev: v1.35.1
     hooks:
       - id: yamllint
-        args: [-c=.yamllint.yml, --strict]
+        args: [-c=.yamllint.yml]
+        files: \.(yml|yaml)$
         exclude: >-
           (?x)^(
-            .github/workflows/|
+            \.github/workflows/|
             tests/testdata/|
-            .goreleaser.yaml
+            \.goreleaser\.yaml|
+            \.markdownlint\.yaml
           )
 # Global settings
 minimum_pre_commit_version: 3.0.0
