feat: Improve YAML linting and formatting
- Add `include_document_start: true` to `.yamlfmt.yml` to include '---' at the document start
- Ensure the YAML linting action fails on formatting issues by removing `continue-on-error: false`
- Exclude `tests/testdata/` and `**/testdata/` directories from YAML formatting and linting
- Update `.pre-commit-config.yaml` to exclude `testdata/` directories at any level

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,8 +19,9 @@ exclude: >-
     node_modules/|
     vendor/|
     \.github/ISSUE_TEMPLATE/|
-    .github/workflows/|
+    \.github/workflows/|
     tests/testdata/|
+    testdata/|
     \.goreleaser\.yaml
   )
 repos:
