--- a/.github/workflows/yaml-linter.yml
+++ b/.github/workflows/yaml-linter.yml
@@ -1,4 +1,3 @@
----
 name: YAML Lint and Format
 on:
   workflow_dispatch:
@@ -36,11 +35,10 @@ jobs:
       - name: Check YAML Formatting with yamlfmt
         run: |
           yamlfmt -conf .yamlfmt.yml -lint
-        # If you want the action to fail on formatting issues, keep the exit code
+        # Ensure the action fails on formatting issues
         continue-on-error: false
 
       - name: Lint YAML Files with yamllint
-        id: yamllint
         run: |
           yamllint -c .yamllint.yml . | tee yamllint.log
           if [ "${PIPESTATUS[0]}" -ne 0 ]; then
