fix: Update YAML linter configuration to exclude .devenv directory
Modify the YAML linter configuration files (.yamlfmt.yml, .yamllint.yml, .github/workflows/yaml-linter.yml, .pre-commit-config.yaml) to exclude the .devenv directory from the linting and formatting process. This change ensures that the YAML linter does not process files within the .devenv directory, which is likely used for development environment setup.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ exclude: >-
     \.git/|
     \.terraform/|
     \.terragrunt-cache/|
-    devenv/|
+    \.devenv/|
     node_modules/|
     vendor/|
     \.github/ISSUE_TEMPLATE/|
