--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -63,7 +63,7 @@ ignore: |
   .direnv/
   .terraform/
   .terragrunt-cache/
-  devenv/
+  \.devenv/
   **/.goreleaser.yaml
   **/.github/workflows/*.yml
   tests/testdata/
