fix: Remove unnecessary flag from goreleaser config
The changes remove the unnecessary `trimpath` flag from the `flags` section of the `.goreleaser.yaml` file. This flag is not required and can be safely removed.

--- a/gotoolbox/tests/testdata/gotoolbox/.goreleaser.yaml
+++ b/gotoolbox/tests/testdata/gotoolbox/.goreleaser.yaml
@@ -16,8 +16,7 @@ builds:
     mod_timestamp: '{{ .CommitTimestamp }}'
     main: main.go
     flags:
-      # trims path
-[-trimpath]
+      - -trimpath
     ldflags:
       # use commit date instead of current date as main.date
       # only needed if you actually use those things in your main package, otherwise can be ignored.
